# news_observer

./: Cargo.toml
src/: app.rs  lib.rs  main.rs  news_fetcher.rs
src/news_app/: mod.rs
src/news_app/entities/: mod.rs
