[package]
name = "news_observer"
version = "0.4.0"
edition = "2021"
authors = ["Evgeny Mangasaryan <mangasaryan.ep@gmail.com>"]

[dependencies]
eframe = "0.17.0"
serde = { version = "1.0.137", features = ["derive"] }
confy = "0.4.0"
reqwest = "0.11.10"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[profile.release]
opt-level = 2

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
